# jext-reborn

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.json  .factorypath  .gitignore  .prettierignore  .prettierrc  .project  LICENSE  LICENSE.MD  README.md  build.gradle.kts  bun.lockb  crowdin.yml  dungeons.json  eslint.config.js  gradle.properties  index.html  known_bugs.txt  package-lock.json  package.json  pnpm-workspace.yaml  pom.xml  postcss.config.cjs  proguard-rules.pro  readme.md  settings.gradle.kts  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1677153165155.mjs
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-webui_bug_report.yml  3-feature_request.yml  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  generator_bug_report.yml  webui_bug_report.yml
.github/workflows/: build-tauri.yml  build-website.yml  cleanup-artifacts.yml  deploy.yml  detekt.yml  gradle.yml  publish.yml  stale.yml
JukeboxExtended/: .project  pom.xml
assets/: index.a44cbf79.js  index.f59fab0e.css
community-packs/: minecraft_caves_and_cliffs.json  minecraft_chaos_cubed.json  minecraft_nether_update.json  minecraft_sprint_to_live.json  minecraft_the_garden_awakens.json  minecraft_the_wild_update.json  minecraft_trails_and_tales.json  minecraft_tricky_trials.json  minecraft_volume_alpha.json  minecraft_volume_beta.json  schema.json
docs/: index.html
docs/assets/: index-0172a8ef.js  index-028443b9.css  index-0b048eec.js  index-0d6af1c0.js  index-1714d1fc.js  index-1f410fc1.js  index-2f4c9a61.js  index-3670e3c7.js  index-36da4f46.js  index-399a26ab.js  index-4197d102.js  index-4709948a.js  index-57e94638.css  index-5a8eebc0.js  index-67fc4538.js  index-6ecf1d30.js  index-7136a3c3.js  index-7eb3bd69.js  index-8275672c.js  index-866618bc.js  index-898217bd.js  index-93a3906d.css  index-94a4c943.js  index-97e0d759.js  index-9860b4e4.css  index-9bedf4b3.js  index-a22923f0.js  (+48 more)
frontend/: .eslintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
langs/: EN_US.json  ES_ES.json  IT_IT.json  readme.md
mock-server/: .eslintrc.json  .gitignore  .prettierrc  bun.lockb  package.json  tsconfig.json
schemas/: config.json
scripts/: append-hash.ts  append-version.ts  download-ffmpeg.ts
src/: App.svelte  app.d.ts  app.html  app.postcss  config.ts  dataset.ts  downloader.ts  ffmpeg.ts  generator.ts  global.d.ts  importer.ts  main.ts  minecraft.ts  packgenerator.ts  store.ts  style.css  style.scss  ui.ts  utils.ts  vite-env.d.ts  worker.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: Info.plist
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs
src-tauri/src/downloaders/: mod.rs
src-tauri/src/downloaders/soundcloud/: client.rs  download.rs  info.rs  mod.rs  structs.rs
src-tauri/src/downloaders/youtube/: bin.rs  mod.rs
src-tauri/src/yt_dlp/: client.rs  download.rs  mod.rs  platform.rs
static/: site.webmanifest
(+972 files in other folders)
