[package]
name = "app"
version = "2.0.0"
description = "A Tauri App"
authors = ["spartacus04"]
license = "MIT"
repository = "https://github.com/spartacus04/jext-reborn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
ffmpeg-sidecar = "2.0.2"
base64 = "0.22.1"
# Replace this with normal yt-dlp when it's patched
yt-dlp = { git = "https://github.com/spartacus04/yt-dlp", features = ["tracing"], rev="0d1fcfb" }
rusty_ytdl = "0.7.4"
regex = "1.11.1"
url = "2.5.3"
reqwest = { version = "0.12.9", features = ["json"] }
hyper-rustls = "^0.27.0"
futures = "0.3.31"
m3u8-rs = "6.0.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
