[package]
name = "jext-companion"
version = "2.0.0"
description = "A companion app for the JEXT minecraft plugin"
authors = ["spartacus04"]
license = "MIT"
repository = "https://github.com/spartacus04/jext-reborn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.2.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
ffmpeg-sidecar = "2.0.5"
base64 = "0.22.1"
url = "2.5.4"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
